--- a/etc/nginx/conf.d/www_blty_dev.conf
+++ b/etc/nginx/conf.d/www_blty_dev.conf
@@ -1,13 +1,13 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name api.eelly.dev;
+    server_name www.blty.dev;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
     }
 
-    root        /var/www/api.eelly.dev/public;
+    root        /var/www/www.blty.dev/public;
     index       index.php index.html index.htm;
     charset     utf-8;
 
