add ea.eelly.dev vhost 修复无法获取到$_GET数据

--- a/etc/nginx/conf.d/uc_eelly_dev.conf
+++ b/etc/nginx/conf.d/uc_eelly_dev.conf
@@ -17,11 +17,16 @@ server {
     ssl_certificate       /etc/nginx/certs/nginx.crt;
     ssl_certificate_key   /etc/nginx/certs/nginx.key;
 
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
+    
     location / {
-        root  /var/www/uc.eelly.dev;
-        try_files $uri $uri/ index.php;
-        autoindex on;
+            try_files $uri $uri/ /index.php?$query_string;
     }
+
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
 
     location ~ \.php$ {
         try_files                     $uri =404;
