add memcached apcu rar add vhost

--- a/etc/nginx/conf.d/pfq_eelly_dev.conf
+++ b/etc/nginx/conf.d/pfq_eelly_dev.conf
@@ -1,18 +1,18 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name www.eelly.dev static.eelly.dev;
+    server_name pfq.eelly.dev;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
     }
 
-    root        /var/www/www.eelly.dev;
+    root        /var/www/pfq.eelly.dev/eellyApp;
     index       index.php index.html index.htm;
     charset     utf-8;
 
-    access_log            /var/log/nginx/api_eelly_dev.access.log;
-    error_log             /var/log/nginx/api_eelly_dev.error.log;
+    access_log            /var/log/nginx/pfq_eelly_dev.access.log;
+    error_log             /var/log/nginx/pfq_eelly_dev.error.log;
 
     ssl_certificate       /etc/nginx/certs/nginx.crt;
     ssl_certificate_key   /etc/nginx/certs/nginx.key;
