--- a/etc/nginx/conf.d/so_eelly_dev.conf
+++ b/etc/nginx/conf.d/so_eelly_dev.conf
@@ -1,18 +1,18 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name www.blty.dev;
+    server_name so.eelly.dev;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
     }
 
-    root        /var/www/www.blty.dev/public;
+    root        /var/www/so.eelly.dev;
     index       index.php index.html index.htm;
     charset     utf-8;
 
-    access_log            /var/log/nginx/www_blty_dev.access.log;
-    error_log             /var/log/nginx/www_blty_dev.error.log;
+    access_log            /var/log/nginx/so_eelly_dev.access.log;
+    error_log             /var/log/nginx/so_eelly_dev.error.log;
 
     ssl_certificate       /etc/nginx/certs/nginx.crt;
     ssl_certificate_key   /etc/nginx/certs/nginx.key;
@@ -20,7 +20,7 @@ server {
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
-    
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
