add imagick extension add crm passport mage1 vhost

--- a/etc/nginx/conf.d/crm_eelly_dev.conf
+++ b/etc/nginx/conf.d/crm_eelly_dev.conf
@@ -1,29 +1,18 @@
-# magento2
-upstream fastcgi_backend {
-    server  127.0.0.1:9000;
-}
-server {
-   listen 80;
-   server_name mage.dev www.mage.dev;
-   set $MAGE_ROOT /var/www/magento2;
-   include /var/www/magento2/nginx.conf.sample;
-}
-
 server {
     listen      80;
     listen      443 ssl;
-    server_name mage1.local;
+    server_name crm.eelly.dev;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
     }
 
-    root    /var/www/mage1.local;
+    root        /var/www/m.eelly.dev/crm/www;
     index       index.php index.html index.htm;
     charset     utf-8;
 
-    access_log        /var/log/nginx/mage1_local.access.log;
-    error_log         /var/log/nginx/mage1_local.error.log;
+    access_log            /var/log/nginx/crm_eelly_dev.access.log;
+    error_log             /var/log/nginx/crm_eelly_dev.error.log;
 
     ssl_certificate       /etc/nginx/certs/nginx.crt;
     ssl_certificate_key   /etc/nginx/certs/nginx.key;
@@ -40,10 +29,10 @@ server {
     location = /robots.txt  { access_log off; log_not_found off; }
 
     location ~ \.php$ {
-        try_files             $uri =404;
+        try_files                     $uri =404;
 
-        fastcgi_pass          127.0.0.1:9000;
-        fastcgi_index         /index.php;
+        fastcgi_pass                  127.0.0.1:9000;
+        fastcgi_index                 /index.php;
 
         include fastcgi_params;
         fastcgi_split_path_info       ^(.+\.php)(/.+)$;
