--- a/etc/nginx/conf.d/dolahair.conf
+++ b/etc/nginx/conf.d/dolahair.conf
@@ -1,29 +1,18 @@
-# magento2
-upstream fastcgi_backend {
-    server  127.0.0.1:9000;
-}
-server {
-   listen 80;
-   server_name mage.dev www.mage.dev;
-   set $MAGE_ROOT /var/www/magento2;
-   include /var/www/magento2/nginx.conf.sample;
-}
-
 server {
     listen      80;
     listen      443 ssl;
-    server_name mage1.local;
+    server_name dolahair.dev;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
     }
 
-    root    /var/www/magento1;
+    root    /var/www/dolahair;
     index       index.php index.html index.htm;
     charset     utf-8;
 
-    access_log        /var/log/nginx/mage1_local.access.log;
-    error_log         /var/log/nginx/mage1_local.error.log;
+    access_log        /var/log/nginx/dolahair.access.log;
+    error_log         /var/log/nginx/dolahair.error.log;
 
     ssl_certificate       /etc/nginx/certs/nginx.crt;
     ssl_certificate_key   /etc/nginx/certs/nginx.key;
