--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -27,5 +27,14 @@ http {
 
     #gzip  on;
 
+    fastcgi_connect_timeout 300s; 
+    fastcgi_send_timeout 300s; 
+    fastcgi_read_timeout 300s;
+
+    fastcgi_buffers 2 256k;
+    fastcgi_buffer_size 256k;
+    fastcgi_busy_buffers_size 256k;
+    fastcgi_temp_file_write_size 256k;
+
     include /etc/nginx/conf.d/*.conf;
 }
