--- a/etc/nginx/conf.d/servicemanage_eelly_dev.conf
+++ b/etc/nginx/conf.d/servicemanage_eelly_dev.conf
@@ -1,18 +1,18 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name mall.eelly.dev help.eelly.dev;
+    server_name servicemanage.eelly.dev;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
     }
 
-    root        /var/www/mall.eelly.dev/public;
+    root        /var/www/servicemanage.eelly.dev/public;
     index       index.php index.html index.htm;
     charset     utf-8;
 
-    access_log            /var/log/nginx/mall_eelly_dev.access.log;
-    error_log             /var/log/nginx/mall_eelly_dev.error.log;
+    access_log            /var/log/nginx/servicemanage_eelly_dev.access.log;
+    error_log             /var/log/nginx/servicemanage_eelly_dev.error.log;
 
     ssl_certificate       /etc/nginx/certs/nginx.crt;
     ssl_certificate_key   /etc/nginx/certs/nginx.key;
@@ -21,12 +21,12 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
 
-    try_files $uri $uri/ @rewrite;
+	try_files $uri $uri/ @rewrite;
 
     location @rewrite {
         rewrite ^(.*)$ /index.php?_url=$1;
     }
-        
+	
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
 
@@ -48,3 +48,18 @@ server {
         deny all;
     }
 }
+
+server {
+	listen 80;
+	listen      443 ssl;
+	server_name servicestatic.eelly.dev;
+	
+	ssl_certificate       /etc/nginx/certs/nginx.crt;
+    ssl_certificate_key   /etc/nginx/certs/nginx.key;
+	root        /var/www/servicemanage.eelly.dev/resource;
+	
+	location / {
+		expires -1;
+	}
+}
+
