--- a/etc/nginx/conf.d/uc_eelly_com.conf
+++ b/etc/nginx/conf.d/uc_eelly_com.conf
@@ -1,18 +1,18 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name manage.eelly.dev;
+    server_name uc.eelly.com uc.eelly.cn uc.eelly.dev;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
     }
 
-    root        /var/www/manage.eelly.dev;
+    root        /var/www/uc.eelly.com;
     index       index.php index.html index.htm;
     charset     utf-8;
 
-    access_log            /var/log/nginx/manage_eelly_dev.access.log;
-    error_log             /var/log/nginx/manage_eelly_dev.error.log;
+    access_log            /var/log/nginx/uc_eelly_com.access.log;
+    error_log             /var/log/nginx/uc_eelly_com.error.log;
 
     ssl_certificate       /etc/nginx/certs/nginx.crt;
     ssl_certificate_key   /etc/nginx/certs/nginx.key;
@@ -20,9 +20,9 @@ server {
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
-
+    
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+            try_files $uri $uri/ /index.php?$query_string;
     }
 
     location = /favicon.ico { access_log off; log_not_found off; }
