--- a/etc/nginx/conf.d/api_eelly_com.conf
+++ b/etc/nginx/conf.d/api_eelly_com.conf
@@ -1,18 +1,18 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name zs.eelly.dev;
+    server_name api.eelly.com api.eelly.cn api.eelly.dev;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
     }
 
-    root        /var/www/m.eelly.dev/newsmobile/www;
+    root        /var/www/api.eelly.com/public;
     index       index.php index.html index.htm;
     charset     utf-8;
 
-    access_log            /var/log/nginx/zs_eelly_dev.access.log;
-    error_log             /var/log/nginx/zs_eelly_dev.error.log;
+    access_log            /var/log/nginx/api_eelly_com.access.log;
+    error_log             /var/log/nginx/api_eelly_com.error.log;
 
     ssl_certificate       /etc/nginx/certs/nginx.crt;
     ssl_certificate_key   /etc/nginx/certs/nginx.key;
