修改环境变量

--- a/etc/nginx/conf.d/api_eelly_com.conf
+++ b/etc/nginx/conf.d/api_eelly_com.conf
@@ -39,7 +39,7 @@ server {
         fastcgi_param PATH_INFO       $fastcgi_path_info;
         fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param APPLICATION_ENV dev;
+        fastcgi_param APPLICATION_ENV staging;
     }
 
     location ~ /\.ht {
