--- a/etc/nginx/conf.d/api_eelly_com.conf
+++ b/etc/nginx/conf.d/api_eelly_com.conf
@@ -14,8 +14,8 @@ server {
     access_log            /var/log/nginx/api_eelly_com.access.log;
     error_log             /var/log/nginx/api_eelly_com.error.log;
 
-    ssl_certificate       /etc/nginx/certs/eelly.cn.cer;
-    ssl_certificate_key   /etc/nginx/certs/eelly.cn.key;
+    ssl_certificate       /etc/nginx/certs/eelly.cn/eelly.cn.cer;
+    ssl_certificate_key   /etc/nginx/certs/eelly.cn/eelly.cn.key;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
