--- a/etc/nginx/conf.d/mall_eelly_com.conf
+++ b/etc/nginx/conf.d/mall_eelly_com.conf
@@ -7,7 +7,7 @@ server {
         rewrite ^ https://$host$request_uri? permanent;
     }
 
-    root        /var/www/mall.eelly.com;
+    root        /var/www/mall.eelly.com/public;
     index       index.php index.html index.htm;
     charset     utf-8;
 
