修复域名冲突

--- a/etc/nginx/conf.d/manage_eelly_com.conf
+++ b/etc/nginx/conf.d/manage_eelly_com.conf
@@ -1,7 +1,7 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name manage.eelly.com manage.eelly.cn manage.eelly.cn;
+    server_name manage.eelly.com manage.eelly.cn manage.eelly.dev;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
