--- a/etc/nginx/conf.d/passport_eelly_com.conf
+++ b/etc/nginx/conf.d/passport_eelly_com.conf
@@ -7,12 +7,12 @@ server {
         rewrite ^ https://$host$request_uri? permanent;
     }
 
-    root        /var/www/passport.eelly.com/web;
+    root        /var/www/m.eelly.com/passport/www;
     index       index.php index.html index.htm;
     charset     utf-8;
 
-    access_log            /var/log/nginx/passport_eelly_com.access.log;
-    error_log             /var/log/nginx/passport_eelly_com.error.log;
+    access_log            /var/log/nginx/m_eelly_com.access.log;
+    error_log             /var/log/nginx/m_eelly_com.error.log;
 
     ssl_certificate       /etc/nginx/certs/eelly.cn/eelly.cn.cer;
     ssl_certificate_key   /etc/nginx/certs/eelly.cn/eelly.cn.key;
@@ -39,7 +39,7 @@ server {
         fastcgi_param PATH_INFO       $fastcgi_path_info;
         fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param APPLICATION_ENV staging;
+        # fastcgi_param APPLICATION_ENV staging;
     }
 
     location ~ /\.ht {
