--- a/etc/nginx/conf.d/pifaquan.eelly.com.conf
+++ b/etc/nginx/conf.d/pifaquan.eelly.com.conf
@@ -1,18 +1,18 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name m.eelly.com m.eelly.cn m.eelly.dev wappf.eelly.dev;
+    server_name pifaquan.eelly.com pifaquan.eelly.cn pifaquan.eelly.dev;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
     }
 
-    root        /var/www/m.eelly.com/frontend/www;
+    root        /var/www/pifaquan.eelly.com/eellyApp;
     index       index.php index.html index.htm;
     charset     utf-8;
 
-    access_log            /var/log/nginx/m_eelly_com.access.log;
-    error_log             /var/log/nginx/m_eelly_com.error.log;
+    access_log            /var/log/nginx/pifaquan_eelly_com.access.log;
+    error_log             /var/log/nginx/pifaquan_eelly_com.error.log;
 
     ssl_certificate       /etc/nginx/certs/eelly.cn/eelly.cn.cer;
     ssl_certificate_key   /etc/nginx/certs/eelly.cn/eelly.cn.key;
@@ -20,9 +20,9 @@ server {
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
-    
+
     location / {
-            try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     location = /favicon.ico { access_log off; log_not_found off; }
@@ -39,7 +39,7 @@ server {
         fastcgi_param PATH_INFO       $fastcgi_path_info;
         fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        # fastcgi_param APPLICATION_ENV staging;
+        #fastcgi_param APPLICATION_ENV staging;
     }
 
     location ~ /\.ht {
