--- a/etc/nginx/conf.d/fx_eelly_com.conf
+++ b/etc/nginx/conf.d/fx_eelly_com.conf
@@ -17,7 +17,7 @@ server {
     ssl_certificate       /etc/nginx/certs/eelly.cn/eelly.cn.cer;
     ssl_certificate_key   /etc/nginx/certs/eelly.cn/eelly.cn.key;
 
-    add_header X-Frame-Options "SAMEORIGIN";
+    # add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
     
