--- a/etc/nginx/conf.d/api_eelly_com.conf
+++ b/etc/nginx/conf.d/api_eelly_com.conf
@@ -1,7 +1,7 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name api.eelly.com api.eelly.cn api.eelly.dev;
+    server_name api.eelly.com api.eelly.cn api.eelly.dev api.eelly.develop;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
