--- a/etc/nginx/conf.d/crm_eelly_com.conf
+++ b/etc/nginx/conf.d/crm_eelly_com.conf
@@ -1,7 +1,7 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name crm.eelly.com crm.eelly.cn crm.eelly.dev;
+    server_name crm.eelly.com crm.eelly.cn crm.eelly.dev crm.eelly.develop;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
