--- a/etc/nginx/conf.d/fx_eelly_com.conf
+++ b/etc/nginx/conf.d/fx_eelly_com.conf
@@ -1,7 +1,7 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name fx.eelly.com fx.eelly.cn fx.eelly.dev;
+    server_name fx.eelly.com fx.eelly.cn fx.eelly.dev fx.eelly.develop;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
