--- a/etc/nginx/conf.d/logger.api_eelly_com.conf
+++ b/etc/nginx/conf.d/logger.api_eelly_com.conf
@@ -1,7 +1,7 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name logger.api.eelly.com logger.api.eelly.cn logger.api.eelly.dev;
+    server_name logger.api.eelly.com logger.api.eelly.cn logger.api.eelly.dev logger.api.eelly.develop;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
