--- a/etc/nginx/conf.d/m_eelly_com.conf
+++ b/etc/nginx/conf.d/m_eelly_com.conf
@@ -1,7 +1,7 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name m.eelly.com m.eelly.cn m.eelly.dev wappf.eelly.dev;
+    server_name m.eelly.com m.eelly.cn m.eelly.dev m.eelly.develop wappf.eelly.dev;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
