--- a/etc/nginx/conf.d/mall_eelly_com.conf
+++ b/etc/nginx/conf.d/mall_eelly_com.conf
@@ -1,7 +1,7 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name mall.eelly.com mall.eelly.cn mall.eelly.dev;
+    server_name mall.eelly.com mall.eelly.cn mall.eelly.dev mall.eelly.develop;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
