--- a/etc/nginx/conf.d/pifaquan.eelly.com.conf
+++ b/etc/nginx/conf.d/pifaquan.eelly.com.conf
@@ -1,7 +1,7 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name pifaquan.eelly.com pifaquan.eelly.cn pifaquan.eelly.dev;
+    server_name pifaquan.eelly.com pifaquan.eelly.cn pifaquan.eelly.dev pifaquan.eelly.develop;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
