--- a/etc/nginx/conf.d/uc_eelly_com.conf
+++ b/etc/nginx/conf.d/uc_eelly_com.conf
@@ -1,7 +1,7 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name uc.eelly.com uc.eelly.cn uc.eelly.dev;
+    server_name uc.eelly.com uc.eelly.cn uc.eelly.dev uc.eelly.develop;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
