--- a/etc/nginx/conf.d/www_eelly_com.conf
+++ b/etc/nginx/conf.d/www_eelly_com.conf
@@ -1,7 +1,7 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name www.eelly.com static.eelly.com www.eelly.cn static.eelly.cn www.eelly.dev static.eelly.dev;
+    server_name www.eelly.com static.eelly.com www.eelly.cn static.eelly.cn www.eelly.dev www.eelly.develop static.eelly.dev;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
