--- a/etc/nginx/conf.d/zs_eelly_com.conf
+++ b/etc/nginx/conf.d/zs_eelly_com.conf
@@ -1,7 +1,7 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name zs.eelly.com zs.eelly.cn zs.eelly.dev;
+    server_name zs.eelly.com zs.eelly.cn zs.eelly.dev zs.eelly.develop;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
