--- a/etc/nginx/conf.d/bbs_eelly_com.conf
+++ b/etc/nginx/conf.d/bbs_eelly_com.conf
@@ -1,7 +1,7 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name bbs.eelly.com bbs.eelly.cn bbs.eelly.dev;
+    server_name bbs.eelly.com bbs.eelly.cn bbs.eelly.dev bbs.eelly.develop;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
