--- a/etc/nginx/conf.d/passport_eelly_com.conf
+++ b/etc/nginx/conf.d/passport_eelly_com.conf
@@ -1,7 +1,7 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name passport.eelly.com passport.eelly.cn passport.eelly.dev;
+    server_name passport.eelly.com passport.eelly.cn passport.eelly.dev passport.eelly.develop;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
