--- a/etc/nginx/conf.d/pf_eelly_com.conf
+++ b/etc/nginx/conf.d/pf_eelly_com.conf
@@ -1,7 +1,7 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name pf.eelly.com pf.eelly.cn pf.eelly.dev;
+    server_name pf.eelly.com pf.eelly.cn pf.eelly.dev pf.eelly.develop;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
