--- a/etc/nginx/conf.d/so_eelly_com.conf
+++ b/etc/nginx/conf.d/so_eelly_com.conf
@@ -1,7 +1,7 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name so.eelly.com so.eelly.cn so.eelly.dev;
+    server_name so.eelly.com so.eelly.cn so.eelly.dev so.eelly.develop;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
