create home branch

--- a/etc/nginx/conf.d/pk10.runphp.net.conf
+++ b/etc/nginx/conf.d/pk10.runphp.net.conf
@@ -1,18 +1,18 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name mall.eelly.com mall.eelly.cn mall.eelly.dev mall.eelly.develop;
+    server_name pk10.runphp.net pk10.runphp.develop;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
     }
 
-    root        /var/www/mall.eelly.com/public;
+    root        /var/www/pk10.runphp.net/public;
     index       index.php index.html index.htm;
     charset     utf-8;
 
-    access_log            /var/log/nginx/mall_eelly_com.access.log;
-    error_log             /var/log/nginx/mall_eelly_com.error.log;
+    access_log            /var/log/nginx/pk10.runphp.net.access.log;
+    error_log             /var/log/nginx/pk10.runphp.net.error.log;
 
     ssl_certificate       /etc/nginx/certs/eelly.cn/eelly.cn.cer;
     ssl_certificate_key   /etc/nginx/certs/eelly.cn/eelly.cn.key;
