--- a/etc/nginx/conf.d/mall_eelly_com.conf
+++ b/etc/nginx/conf.d/mall_eelly_com.conf
@@ -21,8 +21,11 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
+    try_files $uri $uri/ @rewrite;
+
+
+    location @rewrite {
+        rewrite ^/(.*)$ /index.php?_url=/$1;
     }
 
     location = /favicon.ico { access_log off; log_not_found off; }
