--- a/etc/nginx/conf.d/logger_api.eelly.com.conf
+++ b/etc/nginx/conf.d/logger_api.eelly.com.conf
@@ -1,13 +1,13 @@
 server {
     listen      80;
     listen      443 ssl;
-    server_name logger.api.eelly.com logger.api.eelly.cn logger.api.eelly.dev logger.api.eelly.develop;
+    server_name logger_api.eelly.com logger_api.eelly.cn logger_api.eelly.dev logger_api.eelly.develop;
 
     if ($scheme = http) {
         rewrite ^ https://$host$request_uri? permanent;
     }
 
-    root        /var/www/logger.api.eelly.com/public;
+    root        /var/www/logger_api.eelly.com/public;
     index       index.php index.html index.htm;
     charset     utf-8;
 
