--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -35,6 +35,8 @@ http {
     fastcgi_buffer_size 256k;
     fastcgi_busy_buffers_size 256k;
     fastcgi_temp_file_write_size 256k;
+	
+    client_max_body_size 16m;
 
     include /etc/nginx/conf.d/*.conf;
 }
